# sketch_robot

./: .gitignore  PROJECT.md  RUN.md  calibration_results.json  ground_truth.json  journal.txt  run_isaac_sim.sh  sketch_ui_standalone.py  sketch_ur10.py
src/eoat_description/: CMakeLists.txt  README.md  package.xml
src/eoat_description/meshes/: aft200_collision.stl  aft200_visual.stl  rr_00a_b_eoat_collision.stl  rr_00a_b_eoat_mesh_metadata.txt  rr_00a_b_eoat_no_camera_collision.stl  rr_00a_b_eoat_no_camera_mesh_metadata.txt
src/eoat_description/urdf/: rr_00a_b_eoat.urdf.xacro  rr_00a_b_eoat_no_camera.urdf.xacro  rr_00a_b_eoat_no_camera_d405.urdf.xacro  rr_00a_b_eoat_no_camera_d405_standalone.urdf  rr_00a_b_eoat_no_camera_d405_standalone.urdf.xacro  rr_00a_b_eoat_no_camera_standalone.urdf  rr_00a_b_eoat_no_camera_standalone.urdf.xacro  rr_00a_b_eoat_standalone.urdf  rr_00a_b_eoat_standalone.urdf.xacro
src/sketch_control/: package.xml  setup.cfg  setup.py
src/sketch_control/config/: objects.yaml  rb10_visualize.rviz  rbpodo_named.srdf
src/sketch_control/launch/: core.launch.py  moveit_with_rsp.launch.py  phase1_python.launch.py  phase2_unity.launch.py  rb10_moveit_full.launch.py  rb10_moveit_no_rviz.launch.py  rb10_moveit_visual.launch.py  rb10_perception_sketch.launch.py  sketch_control.launch.py
src/sketch_control/sketch_control/: calibration_handeye.py  d405_surface_refiner_node.py  depth_to_pointcloud_node.py  environment_scanner_node.py  ft_normal_controller_node.py  isaac_sim_rb10.py  isaac_sim_ur10.py  joint_calibrator.py  moveit_executor.py  sketch_ui.py  (+8 more)
(+51 files in other folders)
