<?xml version="1.0"?>
<package format="3">
  <name>eoat_description</name>
  <version>0.1.0</version>
  <description>URDF and mesh description for the RR-00A_B EOAT assembly.</description>
  <maintainer email="minjea@example.com">minjea</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
