<?xml version="1.0"?>
<package format="3">
  <name>sketch_control</name>
  <version>0.1.0</version>
  <description>Sketch-based robot control for UR10 in Isaac Sim</description>
  <maintainer email="minjea@todo.com">minjea</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <exec_depend>python3-pil</exec_depend>
  <exec_depend>python3-pil.imagetk</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
